[package]
name = "hasher"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.9.2"
clap = "2.33.3"
crc = "2.0.0"
fsb = "0.0.2"
gost94 = "0.9.1"
groestl = "0.9.0"
md2 = "0.9.0"
md4 = "0.9.0"
md5 = "0.7.0"
ripemd160 = "0.9.1"
ripemd256 = "0.1.0"
ripemd320 = "0.9.0"
sha1 = "0.6.0"
sha2 = "0.9.8"
sha3 = "0.9.1"
